Money Manager 18.4.0
* Performance optimizations
* Ability to create database schema from UI